# endstone-chat-triggers

./: .gitignore  404.html  README.md  index.html  properdocs.yml  pyproject.toml  requirements.txt
assets/: ctfavi.png.kra
docs/: index.md  requirements.txt
docs/assets/images/: commandblocks.png.kra
docs/getting-started/: configuration.md  first-workflow.md  installation.md
docs/javascripts/: headers.js  window.js
docs/plugin-api/: introduction.md
docs/stylesheets/: badges.css  extra.css
docs/workflows/: events.md  twitch_conditions.md
getting-started/configuration/: index.html
getting-started/first-workflow/: index.html
getting-started/installation/: index.html
images/: chattriggers.kra  twitchspawnforendstone.png.kra
javascripts/: window.js
plugin-api/introduction/: index.html
src/endstone_chat_triggers/: __init__.py  api.py  commands.py  config.py  main.py
src/endstone_chat_triggers/actions/: executor.py  management.py  models.py
src/endstone_chat_triggers/debug/: listener.py
src/endstone_chat_triggers/events/: __init__.py
src/endstone_twitch_spawn/: __init__.py  api.py  commands.py  config.py  main.py
src/endstone_twitch_spawn/actions/: __init__.py  context.py  exceptions.py  executor.py  management.py  models.py  parser.py
src/endstone_twitch_spawn/debug/: __init__.py  listener.py
src/endstone_twitch_spawn/events/: __init__.py  base.py
src/endstone_twitch_spawn/models/: __init__.py
stylesheets/: extra.css
workflows/events/: index.html
workflows/twitch_conditions/: index.html
(+29 files in other folders)
