[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chat-triggers"
version = "0.1.0"
description = "A plugin for streamers!! Handles live events and such"
authors = [
    { email = "nikolekrescendo@protonmail.com", name = "niko-at-chalupa" },
]
dependencies = [
    "endstone",
    "python-socketio",
    "pydantic",
    "ruamel.yaml",
    "websocket-client",
    "rich",
    "twitchapi",
]

[project.entry-points."endstone"]
chat-triggers = "endstone_chat_triggers:ChatTriggersPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chat_triggers"]