[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chat-triggers"
version = "1.0.1"
description = "A plugin for streamers!! Handles live events and such"
authors = [
    { email = "nikolekrescendo@protonmail.com", name = "niko-at-chalupa" },
    { name = "MakiTazo" },
]
dependencies = [
    "endstone",
    "python-socketio",
    "pydantic",
    "ruamel.yaml",
    "websocket-client",
    "rich",
    "twitchapi",
]
readme = "README.md"

[project.entry-points."endstone"]
chat-triggers = "endstone_chat_triggers:ChatTriggersPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chat_triggers"]